--- a/homepage.html
+++ b/homepage.html
@@ -15,29 +15,23 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
   <div class="menu">
   <h1><a href="">Home</a> <a href="Bio.html">Bio</a> <a href="">Fiori</a> <a href="">Partner </a> <a href="">Contatti</a></h1>
   </div>
-  
-  
-  <table class="hometable">
-  <tr>
-  <th>
-  <table class="prodotti">Catalogo
-  <tr>
-  <td>Rose Rosse <br> immagine <br>10€</td>
-  <td>tulipani gialli <br> immagine <br>20€</td>
-  <td>margherite <br> immagine <br>20€</td>
-  </tr>
-  <tr>
-  <td> fiori</td>
-  <td> rose rosse</td>
-  <td> tulipani gialli</td>
-  </tr>
-  </table>
-  </th>
-  <th>
-  <p>I fiori del giorno <br>
-  Rose <br>
-  Tulipani<br>
-  
+
+
+  <div class="hometable">
+    <table class="prodotti" cellspacing="40" cellpadding="10">
+    <tr>
+    <td>Rose Rosse <br> immagine <br>10€</td>
+    <td>tulipani gialli <br> immagine <br>20€</td>
+    <td>margherite <br> immagine <br>20€</td>
+    </tr>
+    <tr>
+    <td> fiori</td>
+    <td> rose rosse</td>
+    <td> tulipani gialli</td>
+    </tr>
+    </table>
+  </div>
+
   </p>
   </th>
   </tr>
