--- a/homepage.html
+++ b/homepage.html
@@ -20,14 +20,14 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
   <div class="hometable">
     <table class="prodotti" cellspacing="40" cellpadding="10">
     <tr>
-    <td>Rose Rosse <br> immagine <br>10€</td>
-    <td>tulipani gialli <br> immagine <br>20€</td>
-    <td>margherite <br> immagine <br>20€</td>
+    <td>Rose Rosse <br> <img src="rosa img.png" alt="immagine rose"></td>
+    <td>tulipani gialli <br> immagine</td>
+    <td>margherite <br> immagine</td>
     </tr>
     <tr>
-    <td> fiori</td>
-    <td> rose rosse</td>
-    <td> tulipani gialli</td>
+    <td> 10 euro</td>
+    <td> 15 euro</td>
+    <td> 20 euro</td>
     </tr>
     </table>
   </div>
