--- a/homepage.html
+++ b/homepage.html
@@ -21,7 +21,7 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
     <table class="prodotti" cellspacing="40" cellpadding="10">
     <tr>
     <td>Rose Rosse <br> <img src="rosa img.png" alt="immagine rose"></td>
-    <td>tulipani gialli <br> immagine</td>
+    <td>tulipani gialli <br> immagine <br> 10 euro</td>
     <td>margherite <br> immagine</td>
     </tr>
     <tr>
