--- a/homepage.html
+++ b/homepage.html
@@ -20,8 +20,8 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
   <div class="hometable">
     <table class="prodotti" cellspacing="40" cellpadding="10">
     <tr>
-    <td>Rose Rosse <br> <img src="rosa img.png" alt="immagine rose"></td>
-    <td>tulipani gialli <br> immagine <br> 10 euro</td>
+    <td>Rose Rosse <br> <img src="rosa img.png" alt="immagine rose"> <br> 10 €</td>
+    <td>tulipani gialli <br> immagine</td>
     <td>margherite <br> immagine</td>
     </tr>
     <tr>
