--- a/homepage.html
+++ b/homepage.html
@@ -18,11 +18,22 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
 
 
   <div class="hometable">
+    <h2>Offerte del giorno</h2>
     <table class="prodotti" cellspacing="40" cellpadding="10">
     <tr>
     <td>Rose Rosse <br> <img src="rosa img.png" alt="immagine rose"></td>
-    <td>tulipani gialli <br> immagine</td>
+    <td>tulipani gialli <br> <img src="tulipani img.png" alt="immagine tulipani"> </td>
     <td>margherite <br> immagine</td>
+    </tr>
+    <tr>
+    <td >5€ <p id="line1">10€</p></td>
+    <td>10€ <p id="line2">15€</p</td>
+    <td>15€<p id="line3">20€</p</td>
+    </tr>
+    <tr>
+    <td>Geranei <br></td>
+    <td>Papaveri <br> immagine</td>
+    <td>Hibiscus<br> immagine</td>
     </tr>
     <tr>
     <td> 10 euro</td>
