Aggiunta nuova div

--- a/homepage.html
+++ b/homepage.html
@@ -41,6 +41,11 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
     <td> 20 euro</td>
     </tr>
     </table>
+
+    <div class="Curiosita">
+      <h2>Curiosita&#768;</h2>
+
+    </div>
   </div>
 
   </p>
