--- a/homepage.html
+++ b/homepage.html
@@ -43,7 +43,8 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
     </table>
 
     <div class="Curiosita">
-      <h2>Curiosita&#768;</h2>
+      <h1>Curiosita&#768; del giorno:</h1>
+      <h1>Tra le cose da sapere sull’Ibiscus ci sono molte curiosità interessanti: in Polinesia, ad esempio, da tempi lontanissimi, l’ibisco è portato tra i capelli dalle ragazze mentre i ragazzi, tradizionalmente, sono soliti appoggiarne un fiore sull’orecchio destro se già fidanzati, o sull’orecchio sinistro se invece sono ancora disponibili.</h1>
 
     </div>
   </div>
