--- a/homepage.html
+++ b/homepage.html
@@ -12,9 +12,7 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
   <link rel="stylesheet" href="css menu.css" type="text/css" media="screen">
 </head>
 <body>
-  <div class="menu">
-  <h1><a href="">Home</a> <a href="Bio.html">Bio</a> <a href="">Fiori</a> <a href="">Partner </a> <a href="">Contatti</a></h1>
-  </div>
+
 
 
   <div class="hometable">
@@ -27,8 +25,8 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
     </tr>
     <tr>
     <td >5€ <p id="line1">10€</p></td>
-    <td>10€ <p id="line2">15€</p</td>
-    <td>15€<p id="line3">20€</p</td>
+    <td>10€ <p id="line2">15€</p></td>
+    <td>15€<p id="line3">20€</p></td>
     </tr>
     <tr>
     <td>Geranei <br></td>
@@ -49,10 +47,20 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
     </div>
   </div>
 
-  </p>
-  </th>
-  </tr>
-  </table>
+  <div class="loved">
+    <table class="prodotti2" cellspacing="10" cellpadding="6">
+      <tr>
+        <td>1</td>
+        <td>2</td>
+        <td>3</td>
+      </tr>
+    </table>
+  </div>
+
+  <div class="menu">
+  <h1><a href="">Home</a> <a href="Bio.html">Bio</a> <a href="">Fiori</a> <a href="">Partner </a> <a href="">Contatti</a></h1>
+  </div>
+
 
   <img  src ="sfondo2.jpg" height="500" width="500" alt="Immagine petalosa" class="sfondo">
 </body>
