--- a/homepage.html
+++ b/homepage.html
@@ -21,7 +21,7 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
     <tr>
     <td>Rose Rosse <br> <img src="rosa img.png" alt="immagine rose"></td>
     <td>tulipani gialli <br> <img src="tulipani img.png" alt="immagine tulipani"> </td>
-    <td>margherite <br> immagine</td>
+    <td>margherite <br> <img src="margherita img.png" alt="immagine margherite"></td>
     </tr>
     <tr>
     <td >5€ <p id="line1">10€</p></td>
@@ -29,14 +29,14 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
     <td>15€<p id="line3">20€</p></td>
     </tr>
     <tr>
-    <td>Geranei <br></td>
-    <td>Papaveri <br> immagine</td>
-    <td>Hibiscus<br> immagine</td>
+    <td>Geranei <br> <img src="geranei img.png" alt="immagine geranei"> </td>
+    <td>Papaveri <br> <img src="papavero.png" alt=""> </td>
+    <td>Hibiscus<br> <img src="hibiscus.png" alt=""> </td>
     </tr>
     <tr>
-    <td> 10 euro</td>
-    <td> 15 euro</td>
-    <td> 20 euro</td>
+      <td >5€ <p id="line1">10€</p></td>
+      <td>10€ <p id="line2">15€</p></td>
+      <td>15€<p id="line3">20€</p></td>
     </tr>
     </table>
 
