--- a/homepage.html
+++ b/homepage.html
@@ -62,6 +62,6 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
   </div>
 
 
-  <img  src ="sfondo2.jpg" height="500" width="500" alt="Immagine petalosa" class="sfondo">
+  <img  src ="logo.png" alt="Immagine petalosa" class="sfondo">
 </body>
 </html>
