creazioni contatti fix home

--- a/homepage.html
+++ b/homepage.html
@@ -13,11 +13,13 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
 </head>
 <body>
 
-
+<div class="menu">
+  <h1><a href="homepage.html">Home</a> <a href="Bio.html">Bio</a> <a href="">Fiori</a> <a href="">Partner </a> <a href="Contatti.html">Contatti</a></h1>
+  </div>
 
   <div class="hometable">
     <h2>Offerte del giorno</h2>
-    <table class="prodotti" cellspacing="40" cellpadding="10">
+    <table class="prodotti" cellspacing="15" cellpadding="10">
     <tr>
     <td>Rose Rosse <br> <img src="rosa img.png" alt="immagine rose"></td>
     <td>tulipani gialli <br> <img src="tulipani img.png" alt="immagine tulipani"> </td>
@@ -34,9 +36,9 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
     <td>Hibiscus<br> <img src="hibiscus.png" alt=""> </td>
     </tr>
     <tr>
-      <td >5€ <p id="line1">10€</p></td>
+      <td>5€ <p id="line1">10€</p></td>
       <td>10€ <p id="line2">15€</p></td>
-      <td>15€<p id="line3">20€</p></td>
+      <td>15€ <p id="line3">20€</p></td>
     </tr>
     </table>
 
@@ -49,17 +51,16 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
 
   <div class="loved">
     <table class="prodotti2" cellspacing="10" cellpadding="6">
-      <tr>
-        <td>1</td>
-        <td>2</td>
-        <td>3</td>
-      </tr>
+     <th style="text-align:center">I prodotti piu venduti</th>
+	 <tr> 
+        <td>1° <img src="mazzo rose.webp" alt="mazzo1" height="300px" width="300px"> </td>
+        <td>2° <img src="Girasoli.webp" alt="mazzo1" height="300px" width="300px"> </td>
+        <td>3° <img src="fiorimisti.webp" alt="mazzo1" height="300px" width="300px"> </td>
+	 </tr>
     </table>
   </div>
 
-  <div class="menu">
-  <h1><a href="">Home</a> <a href="Bio.html">Bio</a> <a href="">Fiori</a> <a href="">Partner </a> <a href="">Contatti</a></h1>
-  </div>
+  
 
 
   <img  src ="logo.png" alt="Immagine petalosa" class="sfondo">
