--- a/homepage.html
+++ b/homepage.html
@@ -14,8 +14,15 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
 <body>
 
 <div class="menu">
-  <h1><a href="homepage.html">Home</a> <a href="Bio.html">Bio</a> <a href="">Fiori</a> <a href="">Partner </a> <a href="Contatti.html">Contatti</a></h1>
+  <ul>
+    <li><a href="homepage.html">Home</a></li>
+    <li><a href="Bio.html">Bio</a></li>
+    <li><a href="">Fiori</a></li>
+    <li><a href="">Partner </a></li>
+    <li><a href="Contatti.html">Contatti</a></li>
+  </ul>
   </div>
+  
 
   <div class="hometable">
     <h2>Offerte del giorno</h2>
