--- a/Contatti.html
+++ b/Contatti.html
@@ -30,7 +30,7 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
   Facebook: latinafiori <br />
   Whatsapp: 382 123 2139 <br />
 
-  Indirizzo:
+  Indirizzo: <em>Viale delle Querce, 35, Latina LT</em>
   </p>
   </div>
 
