--- a/homepage.html
+++ b/homepage.html
@@ -21,9 +21,9 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
     <h2>Offerte del giorno</h2>
     <table class="prodotti" cellspacing="15" cellpadding="10">
     <tr>
-    <td>Rose Rosse <br> <img src="rosa img.png" alt="immagine rose"></td>
-    <td>tulipani gialli <br> <img src="tulipani img.png" alt="immagine tulipani"> </td>
-    <td>margherite <br> <img src="margherita img.png" alt="immagine margherite"></td>
+    <td>Rose Rosse <br> <img src="media/rosa img.png" alt="immagine rose"></td>
+    <td>tulipani gialli <br> <img src="media/tulipani img.png" alt="immagine tulipani"> </td>
+    <td>margherite <br> <img src="media/margherita img.png" alt="immagine margherite"></td>
     </tr>
     <tr>
     <td >5€ <p id="line1">10€</p></td>
@@ -31,9 +31,9 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
     <td>15€<p id="line3">20€</p></td>
     </tr>
     <tr>
-    <td>Geranei <br> <img src="geranei img.png" alt="immagine geranei"> </td>
-    <td>Papaveri <br> <img src="papavero.png" alt=""> </td>
-    <td>Hibiscus<br> <img src="hibiscus.png" alt=""> </td>
+    <td>Geranei <br> <img src="media/geranei img.png" alt="immagine geranei"> </td>
+    <td>Papaveri <br> <img src="media/papavero.png" alt=""> </td>
+    <td>Hibiscus<br> <img src="media/hibiscus.png" alt=""> </td>
     </tr>
     <tr>
       <td>5€ <p id="line1">10€</p></td>
@@ -53,9 +53,9 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
     <table class="prodotti2" cellspacing="10" cellpadding="6">
      <th style="text-align:center">I prodotti piu venduti</th>
 	 <tr>
-        <td>1° <img src="mazzo rose.webp" alt="mazzo1" height="300px" width="300px"> </td>
-        <td>2° <img src="Girasoli.webp" alt="mazzo1" height="300px" width="300px"> </td>
-        <td>3° <img src="fiorimisti.webp" alt="mazzo1" height="300px" width="300px"> </td>
+        <td>1° <img src="media/mazzo rose.webp" alt="mazzo1" height="300px" width="300px"> </td>
+        <td>2° <img src="media/Girasoli.webp" alt="mazzo1" height="300px" width="300px"> </td>
+        <td>3° <img src="media/fiorimisti.webp" alt="mazzo1" height="300px" width="300px"> </td>
 	 </tr>
     </table>
   </div>
@@ -63,6 +63,6 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
 
 
 
-  <img  src ="logo.png" alt="Immagine petalosa" class="sfondo">
+  <img  src ="media/logo.png" alt="Immagine petalosa" class="sfondo">
 </body>
 </html>
