Aggiunta div subbody
La div in questione permette il centramento delle div sulla pagina

--- a/Contatti.html
+++ b/Contatti.html
@@ -13,6 +13,9 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
 </head>
 <body>
 
+  <div class="subbody">
+
+  </div>
 
   <div class="menu">
     <ul>
