--- a/homepage.html
+++ b/homepage.html
@@ -7,7 +7,7 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-  <title>Latina fiori::Our Story</title>
+  <title>Latina fiori::Home</title>
 
   <link rel="stylesheet" href="css menu.css" type="text/css" media="screen">
 </head>
@@ -17,8 +17,8 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
   <ul>
     <li><a href="homepage.html">Home</a></li>
     <li><a href="Bio.html">Bio</a></li>
-    <li><a href="">Fiori</a></li>
-    <li><a href="">Partner </a></li>
+    <li><a href="Fiori.html">Fiori</a></li>
+    <li><a href="Partner.html">Partner </a></li>
     <li><a href="Contatti.html">Contatti</a></li>
   </ul>
   </div>
@@ -29,11 +29,11 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
     <table class="prodotti" cellspacing="15" cellpadding="10">
     <tr>
     <td>Rose Rosse <br> <img src="media/rosa img.png" alt="immagine rose"></td>
-    <td>tulipani gialli <br> <img src="media/tulipani img.png" alt="immagine tulipani"> </td>
-    <td>margherite <br> <img src="media/margherita img.png" alt="immagine margherite"></td>
+    <td>Tulipani Gialli <br> <img src="media/tulipani img.png" alt="immagine tulipani"> </td>
+    <td>Margherite <br> <img src="media/margherita img.png" alt="immagine margherite"></td>
     </tr>
     <tr>
-    <td >5€ <p id="line1">10€</p></td>
+    <td>5€ <p id="line1">10€</p></td>
     <td>10€ <p id="line2">15€</p></td>
     <td>15€<p id="line3">20€</p></td>
     </tr>
@@ -60,9 +60,9 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
     <table class="prodotti2" cellspacing="10" cellpadding="6">
      <th style="text-align:center">I prodotti piu venduti</th>
 	 <tr>
-        <td>1° <img src="media/mazzo rose.webp" alt="mazzo1" height="300px" width="300px"> </td>
-        <td>2° <img src="media/Girasoli.webp" alt="mazzo1" height="300px" width="300px"> </td>
-        <td>3° <img src="media/fiorimisti.webp" alt="mazzo1" height="300px" width="300px"> </td>
+        <td style="text:strong">1° <img src="media/mazzo rose.webp" alt="mazzo1" height="300px" width="300px"> </td>
+        <td style="text:strong">2° <img src="media/Girasoli.webp" alt="mazzo1" height="300px" width="300px"> </td>
+        <td style="text:strong">3° <img src="media/fiorimisti.webp" alt="mazzo1" height="300px" width="300px"> </td>
 	 </tr>
     </table>
   </div>
